WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238592
Player window shouldn't have black bar when going into fullscreen
https://bugs.webkit.org/show_bug.cgi?id=238592
Summary
Player window shouldn't have black bar when going into fullscreen
Jean-Yves Avenard [:jya]
Reported
2022-03-30 23:06:19 PDT
Player window shouldn't have black bar when going into fullscreen
Attachments
Patch
(3.21 KB, patch)
2022-03-30 23:16 PDT
,
Jean-Yves Avenard [:jya]
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2022-03-30 23:13:56 PDT
rdar://91085981
Jean-Yves Avenard [:jya]
Comment 2
2022-03-30 23:16:48 PDT
Created
attachment 456205
[details]
Patch
EWS
Comment 3
2022-03-31 19:14:58 PDT
Committed
r292195
(
249098@main
): <
https://commits.webkit.org/249098@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456205
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug