Player window shouldn't have black bar when going into fullscreen https://bugs.webkit.org/show_bug.cgi?id=238592 rdar://91085981

Reviewed by Tim Horton.

Set the window size to the video element size when going fullscreen and
restore the original window size when coming out of it.

Manually tested.

* UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
(-[WKFullScreenWindowController beganEnterFullScreenWithInitialFrame:finalFrame:]):
(-[WKFullScreenWindowController beganExitFullScreenWithInitialFrame:finalFrame:]):



Canonical link: https://commits.webkit.org/249098@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292195 268f45cc-cd09-0410-ab3c-d52691b4dbfc